--- a/_layouts/pizza.html
+++ b/_layouts/pizza.html
@@ -10,8 +10,10 @@
     <title>{{ page.title }}</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="css/jquery.min.css" rel="stylesheet"> -->
     <link href="css/billy.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -70,7 +72,6 @@
     </div>
     
     {{ content }}
-    
-    <script src="js/bootstrap.min.js"></script>
+   
   </body>
 </html>
