--- a/_layouts/pizza.html
+++ b/_layouts/pizza.html
@@ -9,11 +9,12 @@
 
     <title>{{ page.title }}</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="css/jquery.min.css" rel="stylesheet"> -->
-    <link href="css/billy.css" rel="stylesheet">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/billy.css" rel="stylesheet">
+    <link href="/css/pizza.css" rel="stylesheet">
+
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -29,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Billy Reisinger</a>
+          <a class="navbar-brand" href="/pizza_index.html">The Amateur Guide to Making Pizza</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -47,9 +48,6 @@
             </li>
             <li>
               <a href='/pizza_log.html'>Pics</a>
-            </li>
-            <li>
-              <a href='/pizza_ingredients.html'>Ingredients</a>
             </li>
             <li>
               <a href='/pizza_faq.html'>FAQs</a>
