--- a/css/billy.css
+++ b/css/billy.css
@@ -63,3 +63,11 @@ ul.contact i {
   min-width: 50px;
   margin: 10px 0 10px 0;
 }
+.tip {
+  float: right;
+  clear: both;
+  padding: 10px;
+  margin: 20px 0px 20px 20px;
+  font-size: 1.6em;
+  width: 200px;
+}
