--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="pizza_index.html">Pizza</a></li>
             <li><a href="music.html">Music</a></li>
             <li><a href="scores.html">Scores</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
