--- a/css/billy.css
+++ b/css/billy.css
@@ -73,6 +73,15 @@ ul.contact i {
   width: 200px;
 }
 .container img, .container iframe  {
-    max-width: 100%;
-    max-height: 100%;        
+  max-width: 100%;
+  max-height: 100%;        
+}
+
+@media print {
+  body {
+    font-size: 12pt;
+  }
+  div.navbar-header {
+    display: block;
+  }
 }
